--- a/src/style.scss
+++ b/src/style.scss
@@ -52,6 +52,19 @@ body {
     }
   }
 }
+@media (max-width: 375px) {
+  .project-preview {
+    width: 100vw !important;
+    margin-left: -40vw !important;
+  }
+  .resized-container {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+  .skill-list {
+    margin-left: 15px;
+  }
+}
 .resized-container {
   padding-top: 20px;
   padding-left: 250px;
@@ -80,6 +93,7 @@ h6{
       height: 15px;
       margin-top: -5px;
       opacity: 0.8;
+      margin-right: 5px;
     }
   }
   .self-motto {
@@ -171,7 +185,7 @@ h6{
     }
   }
   .skills-circles {
-    padding-left: 2px;
+    padding-left: 10px;
     padding-right: 30px;
     display: flex;
     flex-direction: row;
@@ -196,19 +210,33 @@ h6{
   // overflow-x: scroll;
   width: 100%;
   margin-top: 20px;
+  .job-year {
+    font-size: 0.4rem;
+    color: #ffffff;
+    position: absolute;
+    left: 0;
+    right: 0;
+    
+    margin: auto;
+  }
   ul {
     padding: 0px;
     margin: 0px;
+    display: flex;
     li {
-      display: inline-block;
+      list-style-type:none;
       background: #56CCF2;
       margin-right: 3px;
       height: 10px;
-      
-      width: 100px;
-
+      width: 100%;
       position: relative;
       &:hover {
+        background: rgb(150, 221, 245);
+        .work-arrow-right {
+          border-top: 5px solid transparent;
+          border-left: 7px solid rgb(150, 221, 245);
+          border-bottom: 5px solid transparent;
+        }
         cursor: pointer;
         .company-container {
           display: block
@@ -236,7 +264,7 @@ h6{
           border-right: 15px solid transparent;
           border-bottom: 8px solid #555;
           margin-left: 40px;
-          margin-top: -8.5px;
+          margin-top: -8px;
           top:0;
         }
         .arrow-top-2 {
@@ -247,7 +275,7 @@ h6{
           border-right: 15px solid transparent;
           border-bottom: 8px solid #ffffff;
           margin-left: 40px;
-          margin-top: -8px;
+          margin-top: -7px;
           top: 0;
         }
       }
@@ -272,7 +300,7 @@ h6{
         }
         .arrow-bottom {
           position: absolute;
-          bottom: -9px;
+          bottom: -8px;
           margin-left: 40px;
           width: 0;
           height: 0;
@@ -282,7 +310,7 @@ h6{
         }
         .arrow-bottom-2 {
           position: absolute;
-          bottom: -8px;
+          bottom: -7px;
           width: 0;
           height: 0;
           margin-left: 40px;
@@ -316,11 +344,22 @@ h6{
 
 .projects-container {
   .project-row {
-    margin-top: 15px;
+    margin-top: 25px;
   }
   .proj-main-logo {
     width: 70px;
     height: 70px;
+  }
+  .url-site {
+    font-size: 10px;
+  }
+  .project-type {
+    font-size: 0.5rem;
+    margin-left: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background: rgb(187, 107, 217);
+    color: #ffffff
   }
   .project-description {
     margin-bottom: 2px;
@@ -341,6 +380,7 @@ h6{
     color: #ffffff;
     font-size: 0.7rem;
     transition: 0.5s;
+    margin-top: 5px;
     &:hover {
       opacity: 0.5;
     }
@@ -361,7 +401,7 @@ h6{
       width:320px;
       height: 200px;
       position: absolute;
-      margin-top: -210px;
+      margin-top: -200px;
       background: #ffffff;
       z-index: 2000;
       display: none;
@@ -375,7 +415,7 @@ h6{
   .project-tag-list {
     margin: 0;
     padding: 0;
-    margin-top: 4px;
+    margin-top: 10px;
     li {
       display: inline-block;
       font-size: 0.6rem;
