--- a/src/style.scss
+++ b/src/style.scss
@@ -64,6 +64,18 @@ body {
   .skill-list {
     margin-left: 15px;
   }
+  .arrow-top {
+    margin-top: -8px !important;
+  }
+  .arrow-top-2 {
+    margin-top: -7px !important;
+  }
+  .arrow-bottom {
+    bottom: -8.5px !important;
+  }
+  .arrow-bottom-2 {
+    bottom: -7px !important;
+  }
 }
 .resized-container {
   padding-top: 20px;
