--- a/src/style.scss
+++ b/src/style.scss
@@ -112,8 +112,8 @@ body {
 }
 .resized-container {
   padding-top: 20px;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 200px;
+  padding-right: 200px;
   margin-bottom: 50px;
 }
 
@@ -193,10 +193,14 @@ h6{
     }
   }
   .circle {
-    width: 25px;
-    height: 15px;
+    width: 15%;
+    height: 13px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     opacity: 0.8;
+    &:last-child {
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
     &:hover {
       opacity: 1;
       cursor: pointer;
